[gd_scene load_steps=9 format=3 uid="uid://dx3ci20qrucwb"]

[ext_resource type="Script" uid="uid://biijk7sigoipl" path="res://card_ui.gd" id="1_huidv"]
[ext_resource type="Texture2D" uid="uid://dckekcudoftqj" path="res://assets/sprites/CardBG.png" id="2_kwle2"]
[ext_resource type="FontFile" uid="uid://mcoukv50aceg" path="res://assets/fonts/PixelOperator8.ttf" id="3_qh7ip"]
[ext_resource type="Texture2D" uid="uid://2h87snpo3u25" path="res://assets/sprites/20250822_2008_Rectangular_Pixel_Art_remix_01k38y6wq2e84ay6j14txya5c8-removebg-preview (1).png" id="4_u5mo3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_huidv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_huidv"]
bg_color = Color(0.154876, 0.154876, 0.154876, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwle2"]
bg_color = Color(0.445303, 0.608175, 0.836817, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u5mo3"]

[node name="CardUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1450.0
offset_bottom = -700.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_huidv")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(150, 200)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kwle2")
expand_mode = 3

[node name="LabelName" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 5.0
offset_top = 12.0
offset_right = 144.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("3_qh7ip")
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
autowrap_mode = 3

[node name="LabelDesc" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.0
offset_top = -154.0
offset_right = -11.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("3_qh7ip")
theme_override_font_sizes/font_size = 8
autowrap_mode = 3

[node name="LabelTags" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 13.0
offset_top = 150.0
offset_right = 138.0
offset_bottom = 166.0
theme_override_fonts/font = ExtResource("3_qh7ip")
theme_override_font_sizes/font_size = 8
text = "Tags: "
vertical_alignment = 1
autowrap_mode = 3

[node name="LabelCost" type="Label" parent="Panel"]
layout_mode = 2
offset_top = 167.0
offset_right = 150.0
offset_bottom = 190.0
theme_override_fonts/font = ExtResource("3_qh7ip")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Panel"]
z_index = 4
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/normal = SubResource("StyleBoxEmpty_huidv")

[node name="CooldownBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = 185.0
offset_right = 137.0
offset_bottom = 200.0
theme_override_styles/background = SubResource("StyleBoxFlat_huidv")
theme_override_styles/fill = SubResource("StyleBoxFlat_kwle2")
show_percentage = false

[node name="Cooldown" type="Label" parent="CooldownBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_qh7ip")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardDetails" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(350, 200)
layout_mode = 0
offset_left = 151.0
offset_top = 1.0
offset_right = 501.0
offset_bottom = 201.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_u5mo3")

[node name="TextureRect" type="TextureRect" parent="CardDetails"]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_u5mo3")
expand_mode = 3

[node name="DetailName" type="Label" parent="CardDetails"]
z_index = 3
layout_mode = 2
offset_left = 10.0
offset_top = 14.0
offset_right = 336.0
offset_bottom = 37.0
theme_override_fonts/font = ExtResource("3_qh7ip")
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
autowrap_mode = 3

[node name="DetailDesc" type="Label" parent="CardDetails"]
z_index = 3
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = -151.0
offset_right = -15.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 2
theme_override_fonts/font = ExtResource("3_qh7ip")
theme_override_font_sizes/font_size = 8
autowrap_mode = 3

[node name="DetailTags" type="Label" parent="CardDetails"]
z_index = 3
layout_mode = 0
offset_left = 23.0
offset_top = 145.0
offset_right = 328.0
offset_bottom = 161.0
theme_override_fonts/font = ExtResource("3_qh7ip")
theme_override_font_sizes/font_size = 8
text = "Tags: "
vertical_alignment = 1
autowrap_mode = 3

[node name="DetailCost" type="Label" parent="CardDetails"]
z_index = 3
layout_mode = 2
offset_left = 28.0
offset_top = 161.0
offset_right = 334.0
offset_bottom = 184.0
theme_override_fonts/font = ExtResource("3_qh7ip")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1
